@@ -6,6 +6,7 @@
 max_times=100
 id=tough_{HP_ADVANCE}
 description= _ "Max HP bonus +" {HP_ADVANCE} _", MAX XP +25%"
+icon="misc/icon-amla-tough.png"
 image="misc/icon-amla-tough.png"
 [effect]
 apply_to=hitpoints
@@ -26,6 +27,7 @@ max_times=100
 id=necroheal
 description= _ "Full Heal"
 image="misc/icon-amla-fullheal.png"
+icon="misc/icon-amla-fullheal.png"
 [effect]
 apply_to=hitpoints
 increase_total=0%
